[Styling] Quick fixes for spacing and margins

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -98,9 +98,6 @@ div#header {
   }
 }
 
-div#content {
-  margin: 10px auto;
-}
 
 div#copyright {
   @include copyright;
