--- a/app/assets/stylesheets/cafe.css.scss
+++ b/app/assets/stylesheets/cafe.css.scss
@@ -6,6 +6,7 @@ $content_width: 600px;
 div#content {
   align-items: center;
   flex-direction: column;
+  margin: 10px auto;
   width: $content_width;
   @include flex;
   div#actions {
